# infotecs_tz

./: README.md
cpp_program/: CMakeLists.txt
cpp_program/include/: shared_buffer.hpp
cpp_program/src/: input_thread.cpp  main.cpp  processing_thread.cpp  shared_buffer.cpp  socket_client.cpp
flutter_program/: pubspec.yaml
flutter_program/lib/: TCP_server_screen.dart  main.dart  my_app.dart
flutter_program/macos/Runner/Configs/: AppInfo.xcconfig
flutter_program/windows/runner/: Runner.rc
